create template and forms with validation

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<!--footer-->
+<footer id="footer" class="top-space">
+
+    <div class="footer1">
+        <div class="container">
+            <div class="row">
+                
+                <div class="col-md-3 widget">
+                    <h3 class="widget-title">Contact</h3>
+                    <div class="widget-body">
+                        <p>+216 29 641 848<br>
+                            <a href="mailto:#">chadihammami@insat.u-carthage.tn</a><br>
+                            <br>
+                            Centre Urbain Nord, Tunis, TUNISIA
+                        </p>	
+                    </div>
+                </div>
+
+                <div class="col-md-3 widget">
+                    <h3 class="widget-title">Follow us</h3>
+                    <div class="widget-body">
+                        <p class="follow-me-icons">
+                            <a href="https://github.com/chedihammami/Work-It" target="_blank"><i class="fa fa-github fa-2"></i></a>
+                        </p>	
+                    </div>
+                </div>
+
+                <div class="col-md-6 widget">
+                    <h3 class="widget-title">Our services</h3>
+                    <div class="widget-body">
+                        <ul>
+                        <li>A variety of job opportunities</li>
+                        <li>A unique platform where you can post your job offers </li>
+                    </ul>
+                    </div>
+                </div>
+
+            </div> <!-- /row of widgets -->
+        </div>
+    </div>
+
+
+
+</footer>	
