--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,127 @@
-<p>home works!</p>
+
+	<header id="head">
+		<div class="container">
+			<div class="row">
+				<h1 class="lead">PROFESSIONALISM, EFFICIENCY, EXPERTISE</h1>
+				<p class="tagline">WORK IT: Your future is ours </p>
+				<p class="btn-toolbar"><a class="btn btn-default btn-lg" role="button" href="#searchtool">Search job</a></p> 
+			</div>
+		</div>
+		
+	</header>
+	<!-- /Header -->
+	<br>
+	<!-- Intro -->
+	<div class="container text-center" id="privileges">
+		<br> <br>
+		
+		<h2 class="thin">Elected as the best job matching website in Tunisia!</h2>
+		<p class="text-muted">
+			Are you looking for your dream job? We allow you to find your job with a click of a button. If you are a company owner looking for qualified students, this is your best place!
+		</p>
+	</div>
+	<!-- /Intro-->
+
+
+	<br>
+	<br>
+	<br>
+	<br>
+	
+		  <div id="searchtool" class="s01">
+			<form>
+			  <fieldset>
+				<legend style="color:#ffffff;">Find your dream job</legend>
+			  </fieldset>
+			  <div class="inner-form">
+				<div class="input-field first-wrap">
+				  <input id="search" type="text" placeholder="choose your employment type" />
+				</div>
+				<div class="input-field second-wrap">
+				  <input id="location" type="text" placeholder="location" />
+				</div>
+				<div class="input-field third-wrap">
+				  <button class="btn-search" type="button">Search</button>
+				</div>
+			  </div>
+			</form>
+		  </div>
+
+
+		
+	
+	<!-- Highlights - jumbotron -->
+	<div class="jumbotron top-space">
+		<div class="container">
+			
+			<h3 class="text-center thin">Reasons to register</h3>
+			
+			<div class="row">
+				<div class="col-md-3 col-sm-6 highlight">
+					<div class="h-caption"><h4><i class="fa fa-cogs fa-5"></i>Start professional life</h4></div>
+					<div class="h-body text-center">
+						<p>We allow you to get started in your professional life by providing the most suitable job for you</p>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 highlight">
+					<div class="h-caption"><h4><i class="fa fa-flash fa-5"></i>Efficient platform</h4></div>
+					<div class="h-body text-center">
+						<p>Our developed algorithms allow you to find your dream job based on your CV and your work experiences </p>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 highlight">
+					<div class="h-caption"><h4><i class="fa fa-heart fa-5"></i>Free platform</h4></div>
+					<div class="h-body text-center">
+						<p> Our platform is totally free. You just need to register and start your journey </p>
+					</div>
+				</div>
+				<div class="col-md-3 col-sm-6 highlight">
+					<div class="h-caption"><h4><i class="fa fa-smile-o fa-5"></i>Feedback feature</h4></div>
+					<div class="h-body text-center">
+						<p> Our website allows you to contact us directly and to give us your feedbacks and suggestions</p>
+					</div>
+				</div>
+			</div> <!-- /row  -->
+		
+		</div>
+	</div>
+	<!-- /Highlights -->
+
+	<!-- container -->
+	<div class="container">
+
+		<h2 class="text-center top-space">Frequently Asked Questions</h2>
+		<br>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<h3>How can I find my dream job</h3>
+				<p> You just need to sign up, upload your CV and then start your Job journey.</p>
+			</div>
+			<div class="col-sm-6">
+				<h3>How can I look for for qualified students for my company? </h3>
+				<p>It's really easy, you need to register your company by providing your info and then posting your job offers.</p>
+			</div>
+		</div> <!-- /row -->
+
+		<div class="row">
+			<div class="col-sm-6">
+				<h3>Can I use this website for free </h3>
+				<p>
+					Yes, you can use the standard version of our platform for free.However, we are working now on a premium enhanced version.  
+				</p>
+			</div>
+			<div class="col-sm-6">
+				<h3>Can I have direct contact with companies?</h3>
+				<p>Yes, our website allows you to find all the details you need in order to enlarge your professional network.</p>
+			</div>
+		</div> <!-- /row -->
+
+
+
+</div>	<!-- /container -->
+	
+		
+	
+
+
