--- a/src/app/company-registration/company-registration.component.html
+++ b/src/app/company-registration/company-registration.component.html
@@ -1,1 +1,68 @@
-<p>company-registration works!</p>
+
+<div class="signup-form">
+    <form [formGroup]="companySignUpForm" (ngSubmit)="signUpCompany()" >
+		<h2>Company registration</h2>
+		<p>It's free and only takes a minute.</p>
+		<hr>
+        <div class="row">
+            <div class="col-md-6">
+        <div class="form-group">
+			<label>Company Name</label>
+        	<input type="text" class="form-control" name="name" formControlName="name">
+            <div *ngIf="name.invalid && name.dirty"
+            class="alert alert-danger"	>
+           Please enter a name
+        </div>
+        </div>
+        <div class="form-group">
+			<label>Email Address</label>
+        	<input email type="email" class="form-control" name="email" formControlName="email">
+        </div>
+        <div *ngIf="email.invalid && email.dirty"
+        class="alert alert-danger"	>
+        Please enter a valid email
+    </div>
+        <div class="form-group">
+			<label>Phone number</label>
+        	<input type="text" class="form-control" name="tel" formControlName="phone">
+        </div>
+        <div *ngIf="phone.invalid && phone.dirty"
+        class="alert alert-danger"	>
+        Please enter Phone number
+    </div>
+        <div class="form-group">
+			<label>Company Address</label>
+        	<input type="text" class="form-control" name="Address" formControlName="address">
+        </div>
+        <div *ngIf="address.invalid && address.dirty"
+        class="alert alert-danger"	>
+        Please enter an address
+    </div>
+            </div>
+            <div class="col-md-6">
+        <div class="form-group">
+			<label>Company website</label>
+        	<input type="url" class="form-control" placeholder="https://example.com" size="30" name="website" formControlName="websiteName">
+        </div>
+        <div *ngIf="websiteName.invalid && websiteName.dirty"
+        class="alert alert-danger"	>
+        Please enter a website
+        </div>
+		<div class="form-group">
+			<label>Password</label>
+            <input type="password" class="form-control" name="password" formControlName="password">
+        </div>
+        <div *ngIf="password.invalid && password.dirty"
+		class="alert alert-danger"	>
+		Please enter a valid password: minimum length is 4
+		</div>
+		<div class="form-group">
+            <input type="submit" class="btn btn-primary btn-block btn-lg" [disabled]="companySignUpForm.invalid" value="Sign Up"/>
+            </div>
+            </div>
+        
+    </div>
+    </form>
+	<div class="text-center">Already have an account? <a  routerLink="/signin/studentsignin" routerLinkActive="active" >Login here</a></div>
+</div>
+
