--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,1 +1,104 @@
-<p>contact works!</p>
+	<!-- Fixed navbar -->
+    <app-navbar></app-navbar>
+	<!-- /.navbar -->
+
+    <br>
+    <br>
+
+	<!-- container -->
+	<div class="container">
+
+		<ol class="breadcrumb">
+			<li><a href="index.html">Home</a></li>
+			<li class="active">About</li>
+		</ol>
+
+		<div class="row">
+			
+			<!-- Article main content -->
+			<article class="col-sm-9 maincontent">
+				<header class="page-header">
+					<h1 class="page-title">Contact us</h1>
+				</header>
+				
+				<p>
+					We’d love to hear from you. Do you have a suggestion? Fill out the form below with some info about your ideas or problems. Please allow a couple days for us to respond.
+				</p>
+				<br>
+					<form #form=ngForm>
+						<div class="row">
+							<div class="col-sm-4">
+								<input type="text" class="form-control" name="username" #NameInput="ngModel" ngModel required placeholder="Name">
+							</div>
+							<div class="col-sm-4">
+								<input  email type="email" class="form-control" name="email" #EmailInput="ngModel" ngModel required placeholder="Email">
+							</div>
+									
+							<div class="col-sm-4">
+								<input tel type="number" class="form-control" name="tel" #PhoneInput="ngModel" ngModel required placeholder="Phone">
+							</div>
+							
+						</div>
+						<br>
+						<div *ngIf="NameInput.invalid && NameInput.dirty"
+							class="alert alert-danger"	>
+							Please enter a name
+						</div>
+						<div *ngIf="EmailInput.invalid && EmailInput.dirty"
+									class="alert alert-danger"	>
+									Please enter a valid email
+									</div>
+						<div *ngIf="PhoneInput.invalid && PhoneInput.dirty"
+							class="alert alert-danger"	>
+							Please enter Phone number
+							</div>
+			
+						
+
+						<br>
+						<div class="row">
+							<div class="col-sm-12">
+								<textarea required placeholder="Type your message here..." class="form-control" rows="9" name="Message" #MessageInput="ngModel" ngModel></textarea>
+							</div>
+						</div>
+						<div *ngIf="MessageInput.invalid && MessageInput.dirty"
+							class="alert alert-danger"	>
+							Please enter your message
+							</div>
+						<br>
+						<div class="row">
+							<div class="col-sm-2 text-right">
+								<input [disabled]="!form.valid" class="btn btn-action" type="submit" value="Send message">
+							</div>
+						</div>
+
+					
+					</form>
+
+			</article>
+			<!-- /Article -->
+			
+			<!-- Sidebar -->
+			<aside class="col-sm-3 sidebar sidebar-right">
+
+				<div class="widget">
+					<h4>Address</h4>
+					<address>
+						Centre Urbain Nord, Tunis, TUNISIA
+					</address>
+					<h4>Phone:</h4>
+					<address>
+						+216 29 641 848 
+					</address>
+				</div>
+
+			</aside>
+			<!-- /Sidebar -->
+
+		</div>
+	</div>	<!-- /container -->
+	
+	<section class="container-full top-space">
+		<div id="map"></div>
+	</section>
+
