--- a/src/app/employee-registration/employee-registration.component.html
+++ b/src/app/employee-registration/employee-registration.component.html
@@ -1,1 +1,100 @@
-<p>employee-registration works!</p>
+<!--employee SignUp form-->
+<div id="sign" class="signup-form col-12">
+    <form class="form" [formGroup]="signUpForm" (ngSubmit)="signIn()">
+		<h2> Student sign Up</h2>
+		<p>It's free and only takes a minute.</p>
+		<hr>
+        <div class="row">
+    <div class="col-md-6">
+        <div class="form-group">
+			<label>Username</label>
+        	<input type="text" class="form-control" name="username" formControlName="username">
+        </div>
+        <div *ngIf="username.invalid && username.dirty"
+            class="alert alert-danger"	>
+           Please enter a name
+        </div>
+        <div class="form-group">
+			<label>Email Address</label>
+        	<input email type="email" class="form-control" name="email" formControlName="email">
+        </div>
+        <div *ngIf="email.invalid && email.dirty"
+        class="alert alert-danger"	>
+        Please enter a valid email
+        </div>
+        <div class="form-group">
+			<label>Phone number</label>
+        	<input type="text" class="form-control" name="tel" formControlName="phone">
+        </div>
+        <div *ngIf="phone.invalid && phone.dirty"
+        class="alert alert-danger"	>
+        Please enter Phone number
+        </div>
+        <div class="form-group">
+			<label>Address</label>
+        	<input type="text" class="form-control" name="Address" formControlName="address">
+        </div>
+        <div *ngIf="address.invalid && address.dirty"
+        class="alert alert-danger"	>
+        Please enter an address
+        </div>
+        <div class="form-group">
+			<label>School</label>
+        	<input type="text" class="form-control" name="school" formControlName="school">
+        </div>
+        <div *ngIf="school.invalid && school.dirty"
+        class="alert alert-danger"	>
+        Please enter a school
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-group">
+			<label>Date of birth</label>
+        	<input type="date" class="form-control" name="Birthdate" formControlName="birthDate">
+        </div>
+        <div class="form-group">
+			<label>Gender</label>
+            <br>
+                <input type="radio" name="gender" value="male"  formControlName="gender" checked> Male<br>
+                <input type="radio" name="gender" value="female" formControlName="gender" > Female<br>
+                <input type="radio" name="gender" value="other" formControlName="gender"  > Other
+        </div>
+		<div class="form-group">
+			<label>Password</label>
+            <input type="password" class="form-control" name="password" formControlName="password">
+        </div>
+        <div *ngIf="password.invalid && password.dirty"
+		class="alert alert-danger"	>
+		Please enter a valid password: minimum length is 4
+		</div>
+        <div class="form-group">
+            <span>Upload Image</span>
+            <br>
+        <label class="form-group image-upload-container">
+            
+            <input  
+                   type="file"
+                   accept="image/*"
+                   (change)="onImageChange($event)"
+                   formControlName="img"
+                  >
+          </label>
+          </div>
+          <div class="file form-group">
+            Upload CV
+            <input type="file" name="file" formControlName="cv" (change)="onFileChange($event)">
+            </div>
+
+            <div class="file-upload">
+       
+            </div>
+            <br>
+		<div class="form-group">
+            
+            <input  type="submit"  class="btn btn-primary btn-block btn-lg" [disabled]="signUpForm.invalid"  value="Sign Up" />
+        </div>
+    </div>
+    </div>
+    </form>
+	<div class="text-center">Already have an account? <a  routerLink="/signin/studentsignin" routerLinkActive="active" >Login here</a></div>
+</div>
