add sign-up company

--- a/src/app/company-registration/company-registration.component.html
+++ b/src/app/company-registration/company-registration.component.html
@@ -24,9 +24,9 @@
     </div>
         <div class="form-group">
 			<label>Phone number</label>
-        	<input type="text" class="form-control" name="tel" formControlName="phone">
+        	<input type="text" class="form-control" name="tel" formControlName="tel">
         </div>
-        <div *ngIf="phone.invalid && phone.dirty"
+        <div *ngIf="tel.invalid && tel.dirty"
         class="alert alert-danger"	>
         Please enter Phone number
     </div>
